# SuccessTrackerAPI

./: .dockerignore  .env.example  Dockerfile  README.md  database.py  docker-compose.yml  docker_compose.yml  main.py  pyproject.toml  requirements.txt  schemas.py
alembic/: env.py
alembic/versions/: 10cd3b10da87_rename_title_to_header.py  9d2763fc8605_update_foreign_key_ondelete_behaviors.py  c8168e99fc86_add_email_to_user_model.py  d2e6950fcffa_add_avatar_path_into_ysers.py  d8bac87297c0_add_description_to_category.py
auth/: auth_utils.py  router.py
core/: celery_config.py  redis_config.py
models/: crud.py  models.py
routers/: categories.py  successes.py
schemas/: __init__.py  category.py  success.py  user.py
templates/: index.html  login.html  signup.html
tests/: conftest.py  test_auth.py  test_categories.py
