[project]
name = "my-fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Fellsing",email = "tamirmingal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "bcrypt (==4.0.1)",
    "alembic (>=1.18.4,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]